# AAO

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: experiment.yaml
data/processed/splits/: dataset_summary.json  test.csv  train.csv  val.csv
models/: l5_smallcnn.pt
r_mirror/: 01_konfiguracja_dane.qmd  98_potok_run_all_python.qmd  _quarto.yml  l05_zalacznik_torchem_R.qmd  lab_L1_awizycja.qmd  lab_L2_filtry.qmd  lab_L3_segmentacja.qmd  lab_L4_cechy.qmd  lab_L5_cnn.qmd  lab_L6_optymalizacja.qmd  lab_L7_wideo.qmd  requirements_quarto.txt
r_mirror/scripts/: run_aaop_lab.sh
reports/: console_log.txt  pipeline_index.jsonl  run_meta.json
reports/figury/: l3_tabela_pomiarow.csv  l4_porownanie.csv  l4_reports.json  l6_iou.txt  l6_lr_sweep.json  l7_blad_analiza.txt  l7_frame_train_history.csv  l7_json.json  l7_video_train_history.csv
reports/mirrored/: l4_raport_knn.txt  l4_raport_svm.txt  l5_classification_report.json  l5_history.csv  l5_metrics.json  l6_arch_val_loss.csv  l6_bbox_history.csv  l6_lr_curves.csv  l6_smallcnn_highdrop.pt  l6_summary.json  l7_metrics.txt
scripts/: extract_frames.py  prepare_dataset.py  run_all_labs.py
src/aaop/: __init__.py  config.py
src/aaop/common/: __init__.py  artifacts.py  bnnr_aug.py  metrics.py  seed.py  training_config.py  video_io.py
src/aaop/lab01_acquisition/: __init__.py  run.py
src/aaop/lab02_filters/: __init__.py  run.py
src/aaop/lab03_segmentation/: __init__.py  run.py
src/aaop/lab04_features/: __init__.py  run.py
src/aaop/lab05_cnn/: __init__.py  dataset.py  model.py  run.py
(+9 files in other folders)
