[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aaop"
version = "0.1.0"
description = "Automatyczna analiza obrazu - projekt zaliczeniowy (L1–L7)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "opencv-python>=4.8",
  "matplotlib>=3.7",
  "scikit-image>=0.22",
  "scikit-learn>=1.3",
  "torch>=2.1",
  "torchvision>=0.16",
  "PyYAML>=6.0",
  "tqdm>=4.65",
  "pandas>=2.0",
  "Pillow>=10.0",
  "bnnr>=0.2.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
